--- a/ProiectFinal27march/HTML/pagina4.html
+++ b/ProiectFinal27march/HTML/pagina4.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </nav>
-    <p>
+    <p class="px">
       Here you will find very few fun informations <span style="color:yellow;">about these animals. Come</span> and explore the entire <span style="color:orange; font-size: 1.6em;"> Safari </span> with us!
     </p>
     <div class="gbox">
