Last Update - 3/27/2022 15:47PM

--- a/ProiectFinal27march/HTML/pagina3.html
+++ b/ProiectFinal27march/HTML/pagina3.html
@@ -2,27 +2,31 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../CSS/pagina3.css" />
     <title>Safari</title>
   </head>
   <body>
     <nav class="nav-bar">
-      <img src="../Fotografii/output-onlinepngtools.png" alt="logo" class="logo" />
+      <img
+        src="../Fotografii/output-onlinepngtools.png"
+        alt="logo"
+        class="logo"
+      />
       <ul>
         <li><a href="../HTML/principal.html">Short Presentation</a></li>
-        <li><a href="../HTML/pagina3.html">Photo Gallery</a></li>
+        <li><a href="../HTML/pagina2.html">Photo Gallery</a></li>
         <li><a href="../HTML/pagina3.html">Monthly contest</a></li>
         <li><a href="../HTML/pagina4.html">Animals</a></li>
       </ul>
       <div class="dropdown">
-          <button class="dropbtn">Visit</button>
-          <div class="dropdown-content">
-            <a href="https://www.serengeti.com/">Serengeti</a>
-            <a href="https://www.malamala.com/" >MalaMala</a>
-            <a href="https://machabasafaris.com/en">Mana Pools</a>
-          </div>
+        <button class="dropbtn">Visit</button>
+        <div class="dropdown-content">
+          <a href="https://www.serengeti.com/">Serengeti</a>
+          <a href="https://www.malamala.com/">MalaMala</a>
+          <a href="https://machabasafaris.com/en">Mana Pools</a>
         </div>
+      </div>
     </nav>
     <div class="divlogin">
       <form action="../HTML/pagina3.html">
@@ -34,29 +38,29 @@
           placeholder="Enter name"
         />
         <label for="email" class="inbuton">Enter your email: </label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Enter email"
-        />
-        <label for="country" class="inbuton">Select your favourite destination</label>
+        <input type="email" id="email" name="email" placeholder="Enter email" />
+        <label for="country" class="inbuton"
+          >Select your favourite destination</label
+        >
         <select id="country" name="country">
           <option value="Tanzania">Serengeti National Park, Tanzania</option>
           <option value="Zimbabwe">Mana Pools National Park, Zimbabwe</option>
-          <option value="South Africa">Mala Mala Game Reserve, South Africa</option>
+          <option value="South Africa">
+            Mala Mala Game Reserve, South Africa
+          </option>
           <option value="Botswana">Okavango Delta, Botswana</option>
-          <option value="Zambia">Lower Zambezi National Park, Zambia </option>
-
+          <option value="Zambia">Lower Zambezi National Park, Zambia</option>
         </select>
         <label class="eti">Do you agree with our T&C?</label><br />
-        <input type="radio" id="box1" value="ticked" name="y"/>
+        <input type="radio" id="box1" value="ticked" name="y" />
         <label> Yes</label><br />
         <input type="radio" id="box2" value="ticked" name="y" />
         <label> No</label><br />
         <input type="checkbox" id="q2" name="v2" value="no" />
         <label class="eti"> Anti-bot check</label>
-        <button type="submit" class="butonlogin">Register and we wish you good luck!</button>
+        <button type="submit" class="butonlogin">
+          Register and we wish you good luck!
+        </button>
       </form>
     </div>
   </body>
