--- a/ProiectFinal27march/HTML/pagina4.html
+++ b/ProiectFinal27march/HTML/pagina4.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../CSS/pagina4.css" />
     <title>Safari</title>
   </head>
@@ -11,7 +11,7 @@
       <img src="../Fotografii/output-onlinepngtools.png" alt="logo" id="logo" />
       <ul>
         <li><a href="../HTML/principal.html">Short Presentation</a></li>
-        <li><a href="../HTML/pagina3.html">Photo Gallery</a></li>
+        <li><a href="../HTML/pagina2.html">Photo Gallery</a></li>
         <li><a href="../HTML/pagina3.html">Monthly contest</a></li>
         <li><a href="../HTML/pagina4.html">Animals</a></li>
       </ul>
@@ -19,103 +19,192 @@
         <button class="dropbtn">Visit</button>
         <div class="dropdown-content">
           <a href="https://www.serengeti.com/">Serengeti</a>
-          <a href="https://www.malamala.com/" >MalaMala</a>
+          <a href="https://www.malamala.com/">MalaMala</a>
           <a href="https://machabasafaris.com/en">Mana Pools</a>
         </div>
       </div>
     </nav>
     <p class="px">
-      Here you will find very few fun informations <span style="color:yellow;">about these animals. Come</span> and explore the entire <span style="color:orange; font-size: 1.6em;"> Safari </span> with us!
+      Here you will find very few fun informations
+      <span style="color: yellow">about these animals. Come</span> and explore
+      the entire
+      <span style="color: orange; font-size: 1.6em"> Safari </span> with us!
     </p>
     <div class="gbox">
       <div class="item1">
-          <img src="../Fotografii/fl1.jpg" alt="leu" class="img1">
-          <ol>
-              <li>Lions can get their water from plants</li>
-              <li>Lions are the only cats who roar together</li>
-              <li>A lion’s roar can be heard up to eight kilometres away</li>
-              <li>Female lions are the main hunters. While they’re out looking for food, the males guard the pride’s territory and their young</li>
-              <li>Lions eat about 18 pounds of meat per day. That would be like a human eating more than 70 hamburgers</li>
-              <li>Only about 1 in 8 male lions survive to adulthood. A majority of lions die shortly after being kicked out of their pride around the age of 2</li>
-            </ol>
-          </div>
-      <div class="item2">
-        <img src="../Fotografii/fl2.jpg" alt="girafa" class="img1">
+        <img src="../Fotografii/fl1.jpg" alt="leu" class="img1" />
         <ol>
-            <li>A giraffe’s spots are much like human fingerprints. No two individual giraffes have exactly the same pattern</li>
-            <li>Giraffes only need 5 to 30 minutes of sleep in a 24-hour period! They often achieve that in quick naps that may last only a minute or two at a time</li>
-            <li>Giraffes only need to drink once every few days. Most of their water comes from all the plants they eat</li>
-            <li>A giraffe's neck is too short to reach the ground. As a result, it has to awkwardly spread its front legs or kneel to reach the ground for a drink of water</li>
-          </ol>
+          <li>Lions can get their water from plants</li>
+          <li>Lions are the only cats who roar together</li>
+          <li>A lion’s roar can be heard up to eight kilometres away</li>
+          <li>
+            Female lions are the main hunters. While they’re out looking for
+            food, the males guard the pride’s territory and their young
+          </li>
+          <li>
+            Lions eat about 18 pounds of meat per day. That would be like a
+            human eating more than 70 hamburgers
+          </li>
+          <li>
+            Only about 1 in 8 male lions survive to adulthood. A majority of
+            lions die shortly after being kicked out of their pride around the
+            age of 2
+          </li>
+        </ol>
+      </div>
+      <div class="item2">
+        <img src="../Fotografii/fl2.jpg" alt="girafa" class="img1" />
+        <ol>
+          <li>
+            A giraffe’s spots are much like human fingerprints. No two
+            individual giraffes have exactly the same pattern
+          </li>
+          <li>
+            Giraffes only need 5 to 30 minutes of sleep in a 24-hour period!
+            They often achieve that in quick naps that may last only a minute or
+            two at a time
+          </li>
+          <li>
+            Giraffes only need to drink once every few days. Most of their water
+            comes from all the plants they eat
+          </li>
+          <li>
+            A giraffe's neck is too short to reach the ground. As a result, it
+            has to awkwardly spread its front legs or kneel to reach the ground
+            for a drink of water
+          </li>
+        </ol>
       </div>
       <div class="item3">
-        <img src="../Fotografii/fl3.jpg" alt="rinocer" class="img1">
+        <img src="../Fotografii/fl3.jpg" alt="rinocer" class="img1" />
         <ol>
-            <li>These incredible creatures are some of the biggest animals in world! The largest of the five species is the white rhino, which can grow to 1.8m tall and and weigh a massive 2,500kg</li>
-            <li>Sadly, it’s estimated that there are only around 29,000 rhinos left in the wild, compared to 500,000 at the beginning of the 20th century. The main threat to these beautiful animals is illegal hunting</li>
-            <li>Black and white rhinos are both, in fact, grey</li>
-            <li>What are rhino horns made of? The same stuff as our fingernails</li>
-          </ol>
+          <li>
+            These incredible creatures are some of the biggest animals in world!
+            The largest of the five species is the white rhino, which can grow
+            to 1.8m tall and and weigh a massive 2,500kg
+          </li>
+          <li>
+            Sadly, it’s estimated that there are only around 29,000 rhinos left
+            in the wild, compared to 500,000 at the beginning of the 20th
+            century. The main threat to these beautiful animals is illegal
+            hunting
+          </li>
+          <li>Black and white rhinos are both, in fact, grey</li>
+          <li>
+            What are rhino horns made of? The same stuff as our fingernails
+          </li>
+        </ol>
       </div>
       <div class="item4">
-        <img src="../Fotografii/fl4.jpg" alt="blackmamba" class="img1">
+        <img src="../Fotografii/fl4.jpg" alt="blackmamba" class="img1" />
         <ol>
-            <li>Black Mamba is the world's fastest snake</li>
-            <li>Black Mambas are more agressive than other venomous snakes</li>
-            <li>Black Mambas have black mouths.While their overall color is usually dark olive, olive green, light to dark gray or grayish brown, when they open their mouths it appears black inside</li>
-            <li>It is both arboreal and terrestrial</li>
-            <li>Unlike most other snakes that bite in the lower extremities when encountered in the standing position, black mamba bites often affect the upper parts of the human body</li>
-          </ol>
+          <li>Black Mamba is the world's fastest snake</li>
+          <li>Black Mambas are more agressive than other venomous snakes</li>
+          <li>
+            Black Mambas have black mouths.While their overall color is usually
+            dark olive, olive green, light to dark gray or grayish brown, when
+            they open their mouths it appears black inside
+          </li>
+          <li>It is both arboreal and terrestrial</li>
+          <li>
+            Unlike most other snakes that bite in the lower extremities when
+            encountered in the standing position, black mamba bites often affect
+            the upper parts of the human body
+          </li>
+        </ol>
       </div>
       <div class="item5">
-        <img src="../Fotografii/fl5.jpg" alt="gorilla" class="img1">
+        <img src="../Fotografii/fl5.jpg" alt="gorilla" class="img1" />
         <ol>
-            <li>Gorillas are very social animals, who live together in groups</li>
-            <li>Gorillas can weigh over 200kg and stand as tall as an average human</li>
-            <li>Gorillas are very clever, and have been recorded making and using tools</li>
-            <li>We share around 98% of our DNA with gorillas</li>
-            <li>They can eat all day long</li>
+          <li>Gorillas are very social animals, who live together in groups</li>
+          <li>
+            Gorillas can weigh over 200kg and stand as tall as an average human
+          </li>
+          <li>
+            Gorillas are very clever, and have been recorded making and using
+            tools
+          </li>
+          <li>We share around 98% of our DNA with gorillas</li>
+          <li>They can eat all day long</li>
         </ol>
       </div>
       <div class="item6">
-        <img src="../Fotografii/fl6.jpg" alt="zebra" class="img1">     
+        <img src="../Fotografii/fl6.jpg" alt="zebra" class="img1" />
         <ol>
-            <li>Our planet is home to three different species of zebra, the plains zebra, Grevy’s zebra and mountain zebra, all three species are native to Africa</li>
-            <li>They can run up to 65km/h</li>
-            <li>Zebras are part of the horse and donkey family</li>
-            <li>Zebras can sleep while standing up</li>
-            <li>Their stripes help camouflage them</li>
-            <li>Zebra stripes are unique like giraffe's pattern and human's fingerprint</li>
-            <li> Zebras are social animals and live together in large groups, called herds. As they migrate to new feeding grounds, ‘super herds’ may form consisting of thousands of individuals. They may team up with other grazers on their travels, too, such as antelope and wildebeest</li>
+          <li>
+            Our planet is home to three different species of zebra, the plains
+            zebra, Grevy’s zebra and mountain zebra, all three species are
+            native to Africa
+          </li>
+          <li>They can run up to 65km/h</li>
+          <li>Zebras are part of the horse and donkey family</li>
+          <li>Zebras can sleep while standing up</li>
+          <li>Their stripes help camouflage them</li>
+          <li>
+            Zebra stripes are unique like giraffe's pattern and human's
+            fingerprint
+          </li>
+          <li>
+            Zebras are social animals and live together in large groups, called
+            herds. As they migrate to new feeding grounds, ‘super herds’ may
+            form consisting of thousands of individuals. They may team up with
+            other grazers on their travels, too, such as antelope and wildebeest
+          </li>
         </ol>
       </div>
       <div class="item7">
-        <img src="../Fotografii/fl7.jpg" alt="hornbill" class="img1">
+        <img src="../Fotografii/fl7.jpg" alt="hornbill" class="img1" />
         <ol>
-            <li>It is said that the wing beat of a great hornbill can be heard more than a half mile away</li>
-            <li>The greater hornbill is able to consume as many as 150 figs during one meal</li>
-            <li>Hornbills are famous for their nesting ritual. Once courtship and mating are over, the female finds a tree hollow and seals herself in with dung and pellets of mud.Some male hornbills are so exhausted after the nesting process that a few may die</li>
-            <li>The first two neck vertebrae of the hornbills have been fused to support their large bill. Though its bill looks quite heavy, is actually very light; it is made up of thin-walled hollow cells</li>
+          <li>
+            It is said that the wing beat of a great hornbill can be heard more
+            than a half mile away
+          </li>
+          <li>
+            The greater hornbill is able to consume as many as 150 figs during
+            one meal
+          </li>
+          <li>
+            Hornbills are famous for their nesting ritual. Once courtship and
+            mating are over, the female finds a tree hollow and seals herself in
+            with dung and pellets of mud.Some male hornbills are so exhausted
+            after the nesting process that a few may die
+          </li>
+          <li>
+            The first two neck vertebrae of the hornbills have been fused to
+            support their large bill. Though its bill looks quite heavy, is
+            actually very light; it is made up of thin-walled hollow cells
+          </li>
         </ol>
       </div>
       <div class="item8">
-          <img src="../Fotografii/fl8.jpg" alt="hippo" class="img1">
-          <ol>
-              <li>Hippos are the third largest mammals on Earth</li>
-              <li>Hippos are strong swimmers</li>
-              <li>The gestation period of a hippo is 243 days (eight months)</li>
-              <li>Hippos can identify friends from enemies</li>
-              <li>Hippos are most active at night</li>
-          </ol>
-        </div>
-      <div class="item9">
-        <img src="../Fotografii/fl9.jpg" alt="eleph" class="img1">
+        <img src="../Fotografii/fl8.jpg" alt="hippo" class="img1" />
         <ol>
-            <li>They're the world's largest land animal</li>
-            <li>Their tusks are actually teeth</li>
-            <li>They communicate through vibrations</li>
-            <li>The elephant's temporal lobe (the area of the brain associated with memory) is larger and denser than that of people - hence the saying 'elephants never forget'</li>
-            <li>Elephants have around 150,000 muscle units in their trunk. Their trunks are perhaps the most sensitive organ found in any mammal - Asian elephants have been seen to pick up a peanut, shell it, blow the shell out and eat the nut. Elephants use their trunks to suck up water to drink – it can contain up to 8 litres of water. They also use their trunks as a snorkel when swimming</li>
+          <li>Hippos are the third largest mammals on Earth</li>
+          <li>Hippos are strong swimmers</li>
+          <li>The gestation period of a hippo is 243 days (eight months)</li>
+          <li>Hippos can identify friends from enemies</li>
+          <li>Hippos are most active at night</li>
+        </ol>
+      </div>
+      <div class="item9">
+        <img src="../Fotografii/fl9.jpg" alt="eleph" class="img1" />
+        <ol>
+          <li>They're the world's largest land animal</li>
+          <li>Their tusks are actually teeth</li>
+          <li>They communicate through vibrations</li>
+          <li>
+            The elephant's temporal lobe (the area of the brain associated with
+            memory) is larger and denser than that of people - hence the saying
+            'elephants never forget'
+          </li>
+          <li>
+            Elephants have around 150,000 muscle units in their trunk. Their
+            trunks are perhaps the most sensitive organ found in any mammal -
+            Asian elephants have been seen to pick up a peanut, shell it, blow
+            the shell out and eat the nut. Elephants use their trunks to suck up
+            water to drink – it can contain up to 8 litres of water. They also
+            use their trunks as a snorkel when swimming
+          </li>
         </ol>
       </div>
     </div>
