--- a/ProiectFinal27march/HTML/pagina2.html
+++ b/ProiectFinal27march/HTML/pagina2.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../CSS/pagina2.css" />
     <title>Safari</title>
   </head>
@@ -11,7 +11,7 @@
       <img src="../Fotografii/output-onlinepngtools.png" alt="logo" id="logo" />
       <ul>
         <li><a href="../HTML/principal.html">Short Presentation</a></li>
-        <li><a href="../HTML/pagina3.html">Photo Gallery</a></li>
+        <li><a href="../HTML/pagina2.html">Photo Gallery</a></li>
         <li><a href="../HTML/pagina3.html">Monthly contest</a></li>
         <li><a href="../HTML/pagina4.html">Animals</a></li>
       </ul>
@@ -19,7 +19,7 @@
         <button class="dropbtn">Visit</button>
         <div class="dropdown-content">
           <a href="https://www.serengeti.com/">Serengeti</a>
-          <a href="https://www.malamala.com/" >MalaMala</a>
+          <a href="https://www.malamala.com/">MalaMala</a>
           <a href="https://machabasafaris.com/en">Mana Pools</a>
         </div>
       </div>
